--- a/Projects/First Project/Churn Classification.ipynb
+++ b/Projects/First Project/Churn Classification.ipynb
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,10 +882,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_x = pd.DataFrame(scaler.fit_transform(data_x), columns=data_x.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CreditScore</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>Balance</th>\n",
+       "      <th>NumOfProducts</th>\n",
+       "      <th>HasCrCard</th>\n",
+       "      <th>IsActiveMember</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <th>country_Germany</th>\n",
+       "      <th>country_Spain</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.326221</td>\n",
+       "      <td>-1.095988</td>\n",
+       "      <td>0.293517</td>\n",
+       "      <td>-1.041760</td>\n",
+       "      <td>-1.225848</td>\n",
+       "      <td>-0.911583</td>\n",
+       "      <td>0.646092</td>\n",
+       "      <td>0.970243</td>\n",
+       "      <td>0.021886</td>\n",
+       "      <td>-0.578736</td>\n",
+       "      <td>-0.573809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.440036</td>\n",
+       "      <td>-1.095988</td>\n",
+       "      <td>0.198164</td>\n",
+       "      <td>-1.387538</td>\n",
+       "      <td>0.117350</td>\n",
+       "      <td>-0.911583</td>\n",
+       "      <td>-1.547768</td>\n",
+       "      <td>0.970243</td>\n",
+       "      <td>0.216534</td>\n",
+       "      <td>-0.578736</td>\n",
+       "      <td>1.742740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.536794</td>\n",
+       "      <td>-1.095988</td>\n",
+       "      <td>0.293517</td>\n",
+       "      <td>1.032908</td>\n",
+       "      <td>1.333053</td>\n",
+       "      <td>2.527057</td>\n",
+       "      <td>0.646092</td>\n",
+       "      <td>-1.030670</td>\n",
+       "      <td>0.240687</td>\n",
+       "      <td>-0.578736</td>\n",
+       "      <td>-0.573809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.501521</td>\n",
+       "      <td>-1.095988</td>\n",
+       "      <td>0.007457</td>\n",
+       "      <td>-1.387538</td>\n",
+       "      <td>-1.225848</td>\n",
+       "      <td>0.807737</td>\n",
+       "      <td>-1.547768</td>\n",
+       "      <td>-1.030670</td>\n",
+       "      <td>-0.108918</td>\n",
+       "      <td>-0.578736</td>\n",
+       "      <td>-0.573809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.063884</td>\n",
+       "      <td>-1.095988</td>\n",
+       "      <td>0.388871</td>\n",
+       "      <td>-1.041760</td>\n",
+       "      <td>0.785728</td>\n",
+       "      <td>-0.911583</td>\n",
+       "      <td>0.646092</td>\n",
+       "      <td>0.970243</td>\n",
+       "      <td>-0.365276</td>\n",
+       "      <td>-0.578736</td>\n",
+       "      <td>1.742740</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CreditScore    Gender       Age    Tenure   Balance  NumOfProducts  \\\n",
+       "0    -0.326221 -1.095988  0.293517 -1.041760 -1.225848      -0.911583   \n",
+       "1    -0.440036 -1.095988  0.198164 -1.387538  0.117350      -0.911583   \n",
+       "2    -1.536794 -1.095988  0.293517  1.032908  1.333053       2.527057   \n",
+       "3     0.501521 -1.095988  0.007457 -1.387538 -1.225848       0.807737   \n",
+       "4     2.063884 -1.095988  0.388871 -1.041760  0.785728      -0.911583   \n",
+       "\n",
+       "   HasCrCard  IsActiveMember  EstimatedSalary  country_Germany  country_Spain  \n",
+       "0   0.646092        0.970243         0.021886        -0.578736      -0.573809  \n",
+       "1  -1.547768        0.970243         0.216534        -0.578736       1.742740  \n",
+       "2   0.646092       -1.030670         0.240687        -0.578736      -0.573809  \n",
+       "3  -1.547768       -1.030670        -0.108918        -0.578736      -0.573809  \n",
+       "4   0.646092        0.970243        -0.365276        -0.578736       1.742740  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_x.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Done !"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -908,7 +1056,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_x,test_x,train_y_test_y = train_test_split(data_x, data_y, test_size=0.25, random_state=)"
+   ]
   }
  ],
  "metadata": {
